# qwen-code-api-py

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  models.py
app/routes/: chat.py
qwen_code_api/: config.py
src/qwen_code_api/: auth.py  headers.py
src/qwen_code_api/routes/: chat.py
src/qwen_code_api/utils/: message_transform.py
